--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - ENVIRONMENT=production
       - SECRET_KEY='xi7v2!5p)%0b&k9a0_3b3dw=c+f^^%0)zrc)95(l^*)pa^-ar+'
-      - DEBUG=
+      - DEBUG=0
     ports:
       - 8000:8000
     depends_on:
