--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - ENVIRONMENT=development
       - SECRET_KEY='xi7v2!5p)%0b&k9a0_3b3dw=c+f^^%0)zrc)95(l^*)pa^-ar+'
+      - DEBUG=0
     volumes:
       - .:/home/air/Workspace/Templates/Portfolio/
     ports:
